2018-12-25  Markus Gans  <guru.mail@muenster.de>
	* Add a "event processing" chapter into the first steps document

2018-12-24  Markus Gans  <guru.mail@muenster.de>
	* Events can not only be sent to FWidgets, but also to FObjects
	* New event FUserEvent for user-defined events

2018-12-19  Markus Gans  <guru.mail@muenster.de>
	* Use of smart pointers
	* Add a "memory management" chapter into the first steps document

2018-12-17  Markus Gans  <guru.mail@muenster.de>
	* Improve FButton mouse click animation
	* Minor data type corrections
	* Reactivate the event queue

2018-12-15  Markus Gans  <guru.mail@muenster.de>
	* Use of the C++11 auto specifier in the program code
	* Code reduction by using of range-based for loop
	* The example program for video attributes now replaces 
	  the switch statement with a vector of lambda expressions

2018-12-09  Markus Gans  <guru.mail@muenster.de>
	* Better handling of the scrollbar maximum
	* Deactivate copy constructor and assignment operator with "= delete"
	* Use nullptr instead of 0 to initialize a pointer values

2018-12-06  Markus Gans  <guru.mail@muenster.de>
	* Easier handling of fc::SpecialCharacter

2018-12-01  Markus Gans  <guru.mail@muenster.de>
	* Switched to the language standard C++11
	* Use delegated constructors and in-class default member initializers

2018-12-01  Markus Gans  <guru.mail@muenster.de>
	* Improved gpm wheel mouse support
	* Fix compile in optimization level 2 for newer gcc

2018-11-27  Markus Gans  <guru.mail@muenster.de>
	* Correct vertical scrollbar position after sorting in FListView

2018-11-25  Markus Gans  <guru.mail@muenster.de>
	* Version 0.5.0
	* Namespace fix in FTermFreeBSD and FTermOpenBSD 
	* Fix compiler warning on non-x86 architectures

2018-11-24  Markus Gans  <guru.mail@muenster.de>
	* Improved Sun Microsystems workstation console quirks
	* Handling environment variables with numbers in FTerm
	* Memory management fix in example program transparent
