@@ -1,3 +1,8 @@
+2018-12-28  Markus Gans  <guru.mail@muenster.de>
+	* Add the assignment operator (=) for FButton to set the button text
+	* Corrected shortening of overlong texts in the title bar of FDialog
+	* Add a "signals and callbacks" chapter into the first steps document
+
 2018-12-25  Markus Gans  <guru.mail@muenster.de>
 	* Add a "event processing" chapter into the first steps document
 
